when parsing user input urls, default to assume local files

The invocation

> dragon foo.mkv

should yield file://$PWD/foo.mkv. Processed as a URL foo.mkv can either be
a relative path or a FQDN though. Since we don't support scheme-less url
notiation for this use case and people are far more likely to use the
invocation argument for local files we can safely coerce QUrl to default
to assume file:// rather than http://

> dragon foo.mkv => file://$PWD/foo.mkv
> dragon http://foo.mkv => http://foo.mkv

BUG: 357795